# backend/swagger.yaml
@@ -6,7 +6,7 @@ info:
 servers:
 - url: https://your-api-domain.com
   description: Production Server
-- url: http://localhost:3000
+- url: http://localhost:5000
   description: Development Server
 paths:
   /signup:
@@ -55,14 +55,25 @@ components:
       required:
       - email
       - password
+      - role
       type: object
       properties:
         email:
           type: string
           format: email
+          example: user@example.com
         password:
           type: string
           format: password
+          example: password123
+        role:
+          type: string
+          description: "The role of the user, defaults to client but can be set to therapist."
+          example: client
+          default: client
+          enum:
+          - client
+          - therapist
     inline_response_200:
       type: object
       properties:
